# chain-extension-contracts

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  NOTICE.md  README.md  config.json  package.json  redspot.config.ts
contracts/assets-example/: Cargo.toml  lib.rs
contracts/psp22_pallet_wrapper/: Cargo.toml  lib.rs
crates/assets/: Cargo.toml  lib.rs
crates/dapps-staking/: Cargo.toml  lib.rs
crates/rmrk/: Cargo.toml  lib.rs
crates/signing/: Cargo.toml  lib.rs
dapps-staking/: Cargo.toml  lib.rs
examples/asset-mock/: Cargo.toml  lib.rs
examples/assets/: Cargo.toml  lib.rs
examples/assets-mock/: Cargo.toml  lib.rs
examples/dapps-staking/: Cargo.toml  lib.rs
examples/rmrk/: Cargo.toml  lib.rs
examples/rooster-contract/: Cargo.toml  lib.rs
examples/rooster-ui/: Contract manual deploy.md  README.md
examples/signing/: Cargo.toml  lib.rs
patches/: @727-ventures+typechain-types+0.0.21.patch
tests/: assets.spec.ts  dapps-staking-errors.ts  dapps-staking.spec.ts  dapps-staking.ts  helper.ts  psp22-pallet-wrapper.spec.ts  rmrk.ts  types.ts
tests/setup/: chai.ts
