[package]
name = "dapps_staking_extension"
version = "0.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"

[dependencies]
ink_primitives = { git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
name = "dapps_staking_extension"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std"
]
ink-as-dependency = []