[package]
name = "assets_example"
version = "0.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0-rc", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

assets_extension = { path = "../../crates/assets", default-features = false }

[dev-dependencies]
ink_e2e = "5.0.0-rc"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "assets_extension/std",
]
ink-as-dependency = []
e2e-tests = []