[package]
name = "psp22_pallet_wrapper"
version = "0.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0-rc", default-features = false}
ink_metadata = { version = "~4.0.0-rc", features = ["derive"], optional = true }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "3.0.0-beta.1", default-features = false, features = ["psp22"] }

assets_extension = { path = "../../crates/assets", default-features = false }
assets-chain-extension-types = { git = "https://github.com/AstarNetwork/astar-frame", branch = "polkadot-v0.9.36", default-features = false, features = ["ink-no-std"] }

[lib]
name = "psp22_pallet_wrapper"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_metadata/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "openbrush/std",
    "assets_extension/std",
    "assets-chain-extension-types/ink-std",
]